--- a/src/utils/i18n/fbt/translatedFbts.json
+++ b/src/utils/i18n/fbt/translatedFbts.json
@@ -1,1 +1,1 @@
-{"en_US":{"ai2C8":"Sign In","3fayOT":"Navigate","zcXn6":"Change Theme"},"ko_KR":{"ai2C8":"로그인","3fayOT":"화면 전환","zcXn6":"테마 변경"}}
+{"en_US":{"3ZLk6B":"Sign In","1xG4eb":"Navigate","40h2N3":"Change Theme"},"ko_KR":{"3ZLk6B":"로그인","1xG4eb":"화면 전환","40h2N3":"테마 변경"}}
