--- a/src/assets/translations/ko.json
+++ b/src/assets/translations/ko.json
@@ -1,7 +1,7 @@
 {
   "fb-locale": "ko_KR",
   "translations": {
-    "b56a1590832508ca438c11e2fa67794f": {
+    "ec98e1556b3dfd0a00f8e536b441586f": {
       "tokens": [],
       "types": [],
       "translations": [
@@ -11,32 +11,42 @@
         }
       ]
     },
-    "579290b3f62f0fd93162fd1c69667b80": {
+    "2fb73271a2abea29f418d0b46cc933e5": {
       "tokens": [],
       "types": [],
       "translations": [
         {
-          "translation": "화면 전환",
+          "translation": "페이스북 계정으로 로그인",
           "variations": {}
         }
       ]
     },
-    "266e827836b82d38073d828285fd7b08": {
+    "c4d976229e40fa65fd06931a87c9986d": {
       "tokens": [],
       "types": [],
       "translations": [
         {
-          "translation": "테마 변경",
+          "translation": "구글 계정으로 로그인",
           "variations": {}
         }
       ]
     },
-    "d045dda0e2a4f8df14e676e3adbcf94d": {
+    "ccf0d6052afa848ac2f5ceca9166ba36": {
       "tokens": [],
       "types": [],
       "translations": [
         {
-          "translation": "뒤로가기",
+          "translation": "애플 계정으로 로그인",
+          "variations": {}
+        }
+      ]
+    },
+    "627fc218ec7e49741894fc61c1091cf7": {
+      "tokens": [],
+      "types": [],
+      "translations": [
+        {
+          "translation": "로그아웃",
           "variations": {}
         }
       ]
