--- a/src/utils/i18n/fbt/translatedFbts.json
+++ b/src/utils/i18n/fbt/translatedFbts.json
@@ -1,1 +1,1 @@
-{"en_US":{"3ZLk6B":"Sign In","1xG4eb":"Navigate","40h2N3":"Change Theme"},"ko_KR":{"3ZLk6B":"로그인","1xG4eb":"화면 전환","40h2N3":"테마 변경"}}
+{"en_US":{"4eZEcS":"Log in","1aPjrW":"Sign in with Facebook","EFEiI":"Sign in with Google","3p9pSQ":"Sign in with Apple","4niPZd":"Log out"},"ko_KR":{"4eZEcS":"로그인","1aPjrW":"페이스북 계정으로 로그인","EFEiI":"구글 계정으로 로그인","3p9pSQ":"애플 계정으로 로그인","4niPZd":"로그아웃"}}
